Revision history for Web::Components

          - Updated copyright year
          - Completed POD for component base classes
          - More prereq fixes
          - Curated dependencies
          - Fixed prereqs
          - Updated MANIFEST

0.12.1    2024-11-27 20:55:34
          - Bump version for release
          - Fix tests. Import exceptions from Web::ComposableRequest
          - Added some POD
          - Better exception detection
          - Adds fqdn to Util. Better rv in Model.error
          - Adds Model Navigation and ConfigLoader
          - Better error handling
          - Can set http headers in a redirect
          - Can set message log level
          - Adds context to log calls
          - Adds should_log_messages to config
          - ReverseMap builds a lazy attribute
          - ReverseMap calls dispatch_request and the subs to parse the map
          - Better regexs in ReverseMap
          - Adds ReverseMap role. Can do uri_for_action
          - Models hash now passed to context constructor
          - Render exception sets level 2

0.11.1    2023-02-16 23:29:31
          - Breaks back compat. Uses a context object not a request one
          - Made loaders use of session object more robust

0.10.1    2017-06-01 23:02:25
          - Makes factory_args a public attribute

0.9.1     2017-02-18 23:43:05
          - Toolchain update
          - Refactored controller routes in loader

0.8.1     2016-11-07 22:54:27
          - Use should_log_errors loader_attr to log exceptions as errors
          - Adds config loader_attr hashref

0.7.1     2016-05-01 15:01:11
          - Redirect preserves query_form when adding message id

0.6.1     2016-03-16 00:06:00
          - Added new signature to response filter
            Can now pass the action path as the first arg instead of
            moniker and method
          - Added coverage badge
          - Improved coverage
          - Tunnel method parameters now configurable